<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Redemption</string>
    <string name="new_game_button_text">NEW GAME</string>
    <string name="exit_button_text">EXIT GAME</string>
    <string name="by_ie_nitk">By IE NITK</string>
    <string name="large_text">large text</string>
    <string name="redemption_app">REDEMPTION APP</string>
    <string name="new_game">New Game</string>
    <string name="endings">Endings</string>
    <string name="settings">Settings</string>
    <string name="credits">credits</string>
    <string name="back">BACK</string>
    <string name="quit">QUIT</string>
    <string name="button1">BUTTON1</string>
    <string name="button2">BUTTON2</string>
    <string name="button3">BUTTON3</string>
    <string name="redemption">REDEMPTION</string>
    <string name="setting">SETTINGS</string>
    <string name="ending">ENDINGS</string>
    <string name="todo">TODO</string>
    <string name="start">START</string>
    <string name="resume">RESUME</string>
    <string name="question">Question</string>

    <string name="cleardata">CLEAR DATA</string>
    <string name="music">MUSIC</string>
    <string name="musicon">MUSIC ON</string>
    <string name="musicoff">MUSIC OFF</string>


    <!-- Credits Section Strings -->
    <string name="credits_heading">CREDITS</string>
    <string name="lead">Creative Heads</string>
    <string name="lead_name1">Madhumita Nara</string>
    <string name="lead_name2">Pranav Krishna</string>
    <string name="story">Story By</string>
    <string name="story_contri1">Sudeepthi Nalla</string>
    <string name="story_contri2">Vineetha Ravada</string>
    <string name="story_contri3">Atreya Majumdar</string>
    <string name="app">App Design By</string>
    <string name="app_contri1">Prakriti Goyal</string>
    <string name="app_contri2">Dwaipayan Munshi</string>
    <string name="specialthanks">Special Mention</string>
    <string name="woc_contri1">Shree Harsha</string>
    <string name="woc_contri2">Satyam Jyotsana</string>
    <string name="newline">\n</string>


    <!--Strings For Endings Page -->
    <string name="title_Endings">Endings</string>
    <string name="endings_page">ENDINGS</string>
    <string name="ending_1">Ending 1</string>
    <string name="ending_2">Ending 2</string>
    <string name="ending_3">Coming Soon</string>
    <string name="ending_4">Coming Soon</string>
    <string name="ending_back">BACK</string>

</resources>
