<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Settings">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/EndingCard"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        app:neumorph_shapeType="pressed">

        <soup.neumorphism.NeumorphTextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text ="@string/endings_page"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textColor="@color/Black"
            />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ending1"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/EndingCard"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp">

        <TextView
            android:drawableTop="@drawable/lock"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/ending_1"
            android:textSize="15sp"
            android:fontFamily="monospace">
        </TextView>
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ending2"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_toEndOf="@id/ending1"
        android:layout_below="@id/EndingCard"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:drawableTop="@drawable/lock"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/ending_2"
            android:textSize="15sp"
            android:fontFamily="monospace">
        </TextView>
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ending3"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/ending1"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp">

        <TextView
            android:drawableTop="@drawable/lock"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/ending_3"
            android:textSize="12sp"
            android:fontFamily="monospace">
        </TextView>
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ending4"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_toEndOf="@id/ending3"
        android:layout_below="@id/ending2"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:neumorph_shapeType="pressed">
        <TextView
            android:drawableTop="@drawable/unlock"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/ending_4"
            android:textSize="12sp"
            android:fontFamily="monospace">
        </TextView>
    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphButton
        android:id="@+id/back_ending"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_below="@id/ending4"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/arrow"
        android:drawablePadding="2dp"
        android:text="@string/ending_back"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        />


    <!--        <Button-->
    <!--            android:id="@+id/button4_play"-->
    <!--            android:layout_width="60dp"-->
    <!--            android:layout_height="55dp"-->
    <!--            android:layout_centerInParent="true"-->
    <!--            android:background="@drawable/sound"-->
    <!--            android:tint="#00FFFFFF"-->
    <!--            tools:ignore="DuplicateIds"-->
    <!--            tools:layout_editor_absoluteX="123dp"-->
    <!--            tools:layout_editor_absoluteY="308dp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/button5"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_above="@id/button4_play"-->
    <!--        android:layout_marginBottom="29dp"-->
    <!--        android:text="clear DATA"-->
    <!--        android:autoSizeTextType="uniform"-->
    <!--        android:textColor="#FFFFFF"-->
    <!--        android:textSize="20sp"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        app:backgroundTint="#000000"-->
    <!--        tools:ignore="DuplicateIds"-->
    <!--        tools:layout_editor_absoluteX="123dp"-->

    <!--        tools:layout_editor_absoluteY="308dp" />-->


</RelativeLayout>