<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@drawable/night">
<LinearLayout
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginBottom="40dp"
            android:padding="8dp">
        <soup.neumorphism.NeumorphCardView
                        style="@style/Widget.Neumorph.CardView"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        app:neumorph_lightSource="leftBottom"
                        app:neumorph_shadowColorDark="#4CC9F0"
                        app:neumorph_shadowColorLight="#4361EE"
                        app:neumorph_shadowElevation="2dp"
                        app:neumorph_shapeType="flat">

                        <TextView
                            android:id="@+id/score_text"
                            android:layout_width="70dp"
                            android:layout_height="40dp"
                            android:textAlignment="viewStart"
                            android:text="SCORE"
                            android:textColor="@color/White"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="15dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/score"
                            android:layout_width="70dp"
                            android:layout_height="40dp"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/White"
                            android:text="0"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="50dp"
                            android:textSize="15sp"/>

                    </soup.neumorphism.NeumorphCardView>
        </RelativeLayout>

    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="20dp"
        app:neumorph_shadowColorLight="#F72585"
        app:neumorph_shadowColorDark="#B5179E"
        app:neumorph_shadowElevation="3dp">
        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QUESTION"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:fontFamily="serif-monospace"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:padding="12dp"/>
    </soup.neumorphism.NeumorphCardView>


    <!---Button 1 XML Code -->
    <soup.neumorphism.NeumorphButton
        android:id="@+id/choice1"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:neumorph_shadowColorDark="@color/GhostWhite"
        app:neumorph_shadowColorLight="@color/WhiteSmoke"
        app:neumorph_shadowElevation="2dp"
        android:text="@string/button1"
        android:textColor="@color/White"
        android:textSize="@dimen/button_font_size"
        android:padding="8dp" />

    <!---Button 2 XML Code -->
    <soup.neumorphism.NeumorphButton
        android:id="@+id/choice2"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:neumorph_shadowColorDark="@color/GhostWhite"
        app:neumorph_shadowColorLight="@color/WhiteSmoke"
        app:neumorph_shadowElevation="2dp"
        android:text="@string/button2"
        android:textColor="@color/White"
        android:textSize="@dimen/button_font_size"
        android:padding="8dp" />

    <!---Button 3 XML Code -->
    <soup.neumorphism.NeumorphButton
        android:id="@+id/choice3"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:neumorph_shadowColorDark="@color/GhostWhite"
        app:neumorph_shadowColorLight="@color/WhiteSmoke"
        app:neumorph_shadowElevation="2dp"
        android:text="@string/button3"
        android:textColor="@color/White"
        android:textSize="@dimen/button_font_size"
        android:padding="8dp" />

</LinearLayout>
</ScrollView>


    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="95dp"-->
    <!--        android:layout_marginBottom="40dp"-->
    <!--        android:padding="8dp">-->
    <!--DESIGN 1 BY DWAIPAYAN MUNSHI-->
    <!--        USE android:background = "@drawable/gradient" for this Design-->
    <!--        <soup.neumorphism.NeumorphCardView-->
    <!--            style="@style/Widget.Neumorph.CardView"-->
    <!--            android:layout_width="170dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_alignParentEnd="true"-->
    <!--            app:neumorph_backgroundColor="@color/Black"-->
    <!--            app:neumorph_lightSource="leftBottom"-->
    <!--            app:neumorph_shadowColorDark="#4CC9F0"-->
    <!--            app:neumorph_shadowColorLight="#4361EE"-->
    <!--            app:neumorph_shadowElevation="2dp"-->
    <!--            app:neumorph_shapeType="flat">-->

    <!--            <TextView-->
    <!--                android:id="@+id/score_text"-->
    <!--                android:layout_width="70dp"-->
    <!--                android:layout_height="40dp"-->
    <!--                android:textAlignment="viewStart"-->
    <!--                android:text="SCORE"-->
    <!--                android:textColor="@color/White"-->
    <!--                android:layout_marginTop="16dp"-->
    <!--                android:layout_marginStart="15dp"-->
    <!--                android:textSize="15sp"/>-->

    <!--            <TextView-->
    <!--                android:id="@+id/score"-->
    <!--                android:layout_width="70dp"-->
    <!--                android:layout_height="40dp"-->
    <!--                android:textAlignment="viewEnd"-->
    <!--                android:textColor="@color/White"-->
    <!--                android:text="0"-->
    <!--                android:layout_marginTop="16dp"-->
    <!--                android:layout_marginStart="50dp"-->
    <!--                android:textSize="15sp"/>-->

    <!--        </soup.neumorphism.NeumorphCardView>-->

    <!--    </RelativeLayout>-->

    <!--DESIGN 1 BY DWAIPAYAN MUNSHI-->



    <!--    DESIGN BY WOC-->


    <!--        <TextView-->
    <!--            android:id="@+id/score"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_alignParentRight="true"-->
    <!--            android:text="0"-->
    <!--            android:textSize="20sp" />-->

    <!--<View
    android:id="@+id/back_1"
    android:layout_width="413dp"
    android:layout_height="733dp"
    android:background="@drawable/redem1" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/question"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="40dp"-->
    <!--        android:padding="8dp"-->
    <!--        android:text="QUESTION"-->
    <!--        android:background="@drawable/background"-->
    <!--        android:backgroundTint="#FFFFFF"-->
    <!--        android:textSize="20sp" />-->
    <!--    <Button-->
    <!--        android:id="@+id/choice1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:background="@drawable/background"-->
    <!--        android:padding="8dp"-->
    <!--        android:text="@string/button1"-->
    <!--        android:backgroundTint="#000000"-->
    <!--        android:textColor="#FFFFFF" />-->

    <!--    <Button-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="BUTTON2"-->
    <!--        android:padding="8dp"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:background="@drawable/background"-->
    <!--        android:backgroundTint="#000000"-->
    <!--        android:textColor="#FFFFFF"-->
    <!--        android:id="@+id/choice2"/>-->

    <!--    <Button-->
    <!--        android:id="@+id/choice3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:background="@drawable/background"-->
    <!--        android:backgroundTint="#000000"-->
    <!--        android:padding="8dp"-->
    <!--        android:text="BUTTON3"-->
    <!--        android:textColor="#FFFFFF" />-->


    <!--    <Button-->
    <!--        android:id="@+id/quit"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:background="#B71C1C"-->
    <!--        android:padding="8dp"-->
    <!--        android:text="QUIT" -->
    <!--        android:textColor="#fff" />-->